...
                    state = pagerState,
                    userScrollEnabled = false
                ) {
                    when (it) {
                        0 -> LoginOnServer(
                            modifier = Modifier
                                .testTag("LoginOnServer"),
                            login = login,
                            onLoginChange = onLoginChange,
                            password = password,
                            onPasswordChange = onPasswordChange,
                            ipDomain = ipDomain,
                            onIpDomainChange = onIpDomainChange,
...
                            onChangePasswordClick = onChangePasswordClick,
                            onRegisterClick = onRegisterClick
                        )

                        1 -> CloudStorageLogin(
                            modifier = Modifier
                                .testTag("CloudStorageLogin"),
                            onAppleClick = onAppleClick,
                            onGoogleClick = onGoogleClick,
                            onDropboxClick = onDropboxClick,
                            onYandexDriveClick = onYandexDriveClick,
                            onSberDriveClick = onSberDriveClick,
                            onMailruCloudClick = onMailruCloudClick
                        )

                        2 -> PersonalVaultLogin(
                            modifier = Modifier
                                .testTag("PersonalVaultLogin"),
                            personalVaultCode = personalVaultCode,
                            onPersonalVaultCodeValueChange = onPersonalVaultCodeValueChange,
                            onFingerprintClick = onFingerprintClick
                        )
                    }
                }
...
